--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -1,5 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">MaDTestApp</string>
     <string name="my_first_git_project">My First Git Project!</string>
     <string name="hello_world">Hello world!</string>
 </resources>
