--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">MaDTestApp</string>
     <string name="my_first_git_project">My First Git Project!</string>
     <string name="hello_world">Hello world!</string>
+    <string name="never_give_up">Never give Up!!!</string>
 </resources>
